--- a/style/style.css
+++ b/style/style.css
@@ -1,29 +1,34 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200; 1.300;1.400;1.500;1.600;1.700;1.800;1.900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
 :root {
     --cor0: #f2f2f2;
     --cor1: #0B3954;
-    --cor2: #5071D5;
+    --cor2: #7457c585;
     --cor3: #5C676D;
     --cor4: #FFB128;
     --cor5: #3b280d;
     --fonte-padrao: Arial, Verdana, Helveticam sans-serif;
-    --fonte-poppins: 'Poppins', cursive;
+    --fonte-poppins: 'Poppins', sans-serif;
     --fonte-sora: 'Sora', cursive;
+    --fonte-bebas: 'Bebas', cursive;
 }
 
-/*CSS GERAL*/
+/*BLOCO GERAL*/
 
 * {
     box-sizing: border-box;
-    font-family: var(--fonte-poppins);
+    font-family: var(--fonte-sora);
     margin: 0;
     padding: 0;
+}
+
+body {
+    height: 100vh;
 }
 
 .interface {
@@ -31,95 +36,57 @@
     margin: 0 auto;
 }
 
+/* BLOCO DO HEADER */
+
 header {
-    background-color: var(--cor0);
-    
+    padding: 30px 4%;
 }
 
-.top-header {
-    background-color: #fff;
-    margin-top: 20px;
-}
-
-.top-header .interface {
+header > .interface {
     align-items: center;
     display: flex;
     justify-content: space-between;
 }
 
-.top-header .btn-header button {
-    background-color: transparent;
-    border: 1px solid var(--cor1);
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    transition: .8s;
-}
-
-.top-header .btn-header button:hover {
-    background-color: var(--cor1);
-}
-
-.top-header .btn-header button a {
+header a{
     color: var(--cor1);
-    font-size: 20px;
-    padding: 13px;
+    display: inline-block;
+    text-decoration: none;
     transition: .5s;
 }
 
-.top-header .btn-header button a:hover {
+header a:hover {
     color: var(--cor4);
+    display: inline-block;
+    transform: scale(1.1);
 }
 
-.top-header .btn-header button i.bi-whatsapp:hover {
-    color: springgreen;
-}
-
-.bottom-header nav ul {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+header nav ul {
     list-style-type: none;
 }
 
-.bottom-header nav ul li a {
-    color: var(--cor1);
-    display: block;
-    font-weight: bolder;
-    padding: 20px;
-    text-decoration: none;
-}
-
-.bottom-header nav ul li a:hover {
-    color: var(--cor2);
-}
-
-.drop-hover {
-    position: relative;
-}
-
-.drop-hover .drop {
-    background-color: var(--cor0);
-    height: 0;
-    position: absolute;
-    overflow: hidden;
-    width: 100%;
-    transition: .5s;
-}
-
-.drop-hover:hover .drop {
-    height: 210px;
-}
-
-.flex {
-    display: flex;
-    gap: 50px;
+header nav ul li {
+    display: inline-block;
+    padding: 0 30px;
 }
 
 
-p {
-    text-align: justify;
+header .btn-contato button {
+    background-color: var(--cor2);
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 30px;
 }
+
+header .btn-contato button:hover {
+    box-shadow: 0px 0px 5px #000;
+}
+
+
+
 
 
 
